    searched for by default.

  - Add the +Z option by default when compiling shared objects on
    HP-UX.

  - Check for whether files exist on disk by listing the directory
    contents, not calling os.path.exists() file by file.  This is
    somewhat more efficient in general, and may be significantly
    more efficient on Windows.

  From Chen Lee:

  - Handle Visual Studio project and solution files in Unicode.

  From Wayne Lee:

  - Avoid "maximum recursion limit" errors when removing $(-$) pairs
    from long command lines.

  From Clive Levinson:

  - Make ParseConfig() recognize and add -mno-cygwin to $LINKFLAGS and
    $CCFLAGS, and -mwindows to $LINKFLAGS.

  From Sanjoy Mahajan:

  - Fix a bad use of Copy() in an example in the man page, and a
    bad regular expression example in the man page and User's Guide.

  From Shannon Mann:

  - Have the Visual Studio project file(s) echo "Starting SCons" before
    executing SCons, mainly to work around a quote-stripping bug in
    (some versions of?) the Windows cmd command executor.

  From Michael McCracken:

  - Add a new "applelink" tool to handle the things like Frameworks and
    bundles that Apple has added to gcc for linking.

  - Use more appropriate default search lists of linkers, compilers and
    and other tools for the 'darwin' platform.

  - Add a LoadableModule Builder that builds a bundle on Mac OS X (Darwin)
    and a shared library on other systems.

  - Improve SWIG tests for use on Mac OS X (Darwin).

  From Georg Mischler:

  - Remove the space after the -o option when invoking the Borland
    BCC compiler; some versions apparently require that the file name
    argument be concatenated with the option.

  From Elliot Murphy:

  - Enhance the tests to guarantee persistence of ListOption
    values in saved options files.

  - Supply the help text when -h is used with the -u, -U or -D options.

  From Leanid Nazdrynau:

  - Fix the Java parser's handling of backslashes in strings.
